# network_project

./: .gitignore  README.md  TODO  groups.yaml  hosts.yaml  manage.py  pyproject.toml  requirements.txt  task_prompts_collection.md
core/: nornir_init.py  tasks.py
network/: forms.py  models.py  urls.py  views.py
network/management/commands/: collect_uptime.py  run_nornir_tasks.py  sync_devices.py
network/migrations/: 0001_initial.py  0002_tasklog_user.py  0003_deviceuptime.py  0003_tasklog_custom_command.py
network/templates/: execution_logs.html  task_form.html
network_core/: admin.py  apps.py
network_core/management/commands/: run_nornir_tasks.py
network_core/migrations/: 0001_initial.py
network_project/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: styles.css
templates/: base.html  dashboard.html  device_form.html  device_list.html  home.html  task_form.html
templates/includes/: pagination.html
templates/registration/: login.html
